# weatherboy

./: Cargo.toml  README.md
src/: app.rs  braille.rs  circle.rs  cloud.rs  main.rs  weather.rs  weather_view.rs  world.rs
src/weather/: provider.rs
src/weather/provider/: open_meteo.rs
src/world/: sky.rs
