[package]
name = "weatherboy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
terminal_size = "0.4.3"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
test-case = "3.3.1"
